change documentation of categories and images
